# grafana_manager_telegram

./: .env.example  Dockerfile  README.md  pyproject.toml
app/: config.py  main.py
app/bot/: router.py
app/bot/handlers/: groups.py  projects.py
app/services/: grafana.py
