[project]
name = "grafana-bot"
version = "0.1.0"
description = "Telegram bot for managing Grafana organizations"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "aiogram>=3.7.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.3.0",
]

[project.scripts]
grafana-bot = "app.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
